# Reversi

./: AfterGame.c  AfterGame.h  CMakeLists.txt  PreGame.c  PreGame.h  README.md  ascii.c  ascii.h  file  main.c  othello-results.txt
Code/: AfterGame.c  AfterGame.h  ascii.h  main.c
Code/[CODE] ANSI-Supported/: findMoves.h  initialize.c  updateGame.c
Code/[CODE] Non-ANSI/: afterGame.h  initialize.c  main.c  turns.c
Code/[CODE]-ANSI-Supported/: afterGame.c  afterGame.h  ascii.c  ascii.h  colour.h  initialize.c  initialize.h  main.c  preGame.c  preGame.h  turns.c  turns.h
Code/[CODE]-Non-ANSI/: afterGame.c  colour.c  findMoves.c  initialize.c  initialize.h  preGame.c  preGame.h  updateGame.h
Documentation/: CMakeLists.txt  documentation.txt  ideas.txt
Sample Outputs/: ascii.txt  instructions.txt
SampleOutputs/: ascii.txt  instructions.txt  othello-results.txt
